--- a/package.json
+++ b/package.json
@@ -22,33 +22,34 @@
     "serve:a11y": "yarn workspace @patternfly/react-console serve:a11y"
   },
   "devDependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "concurrently": "^5.3.0",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-markdown": "^1.0.2",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-config-prettier": "8.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "prettier": "2.7.1",
-    "jest":"^29.2.2",
-    "babel-jest":"^29.2.2",
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
-    "@babel/preset-react":"^7.18.6",
     "@babel/preset-flow": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/react":"^13.4.0",
-    "@testing-library/user-event": "14.4.3",
     "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "babel-jest": "^29.2.2",
+    "concurrently": "^5.3.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.2.2",
+    "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.2.2",
+    "prettier": "2.7.1",
+    "react": "^18",
+    "react-dom": "^18",
     "serve": "^14.1.2"
   }
 }
