--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@patternfly/react-console",
-  "version": "4.93.25",
+  "version": "4.93.38",
   "description": "This package provides VncConsole, SerialConsole and DesktopViewer React components to be used alongside patternfly-react to access virtual machine or server consoles.",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -31,13 +31,14 @@
   },
   "dependencies": {
     "@novnc/novnc": "^1.3.0",
-    "@patternfly/react-core": "^4.268.0",
+    "@patternfly/react-core": "^4.273.3",
     "@spice-project/spice-html5": "^0.2.1",
     "@types/file-saver": "^2.0.1",
     "file-saver": "^1.3.8",
     "tslib": "^2.0.0",
     "xterm": "^4.8.1",
-    "xterm-addon-fit": "^0.2.1"
+    "xterm-addon-fit": "^0.2.1",
+    "@patternfly/patternfly": "4.224.1"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17 || ^18",
