--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@novnc/novnc": "^1.3.0",
     "@patternfly/react-core": "^4.273.3",
+    "@patternfly/react-styles": "^4.92.5",
     "@spice-project/spice-html5": "^0.2.1",
     "@types/file-saver": "^2.0.1",
     "file-saver": "^1.3.8",
