--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -5,8 +5,7 @@
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs && yarn build:css",
-    "build:css": "node ./buildCSS.js",
+    "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc --build --verbose ./tsconfig.json",
     "build:cjs": "tsc --build --verbose ./tsconfig.cjs.json",
     "clean": "rimraf dist",
@@ -35,7 +34,6 @@
   "dependencies": {
     "@novnc/novnc": "^1.3.0",
     "@patternfly/react-core": "^4.273.3",
-    "@patternfly/react-styles": "^4.92.3",
     "@spice-project/spice-html5": "^0.2.1",
     "@types/file-saver": "^2.0.1",
     "file-saver": "^1.3.8",
