--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "yarn lint:js && yarn lint:md",
     "test": "TZ=EST jest packages",
     "test:a11y": "yarn workspace @patternfly/react-console test:a11y",
-    "serve:a11y": "yarn workspace @patternfly/react-console serve:a11y"
+    "serve:a11y": "yarn workspace @patternfly/react-console serve:a11y",
+    "screenshots": "yarn workspace @patternfly/react-console docs:screenshots"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
