--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-flow": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/dom": "9.0.0",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -50,6 +51,9 @@
     "prettier": "2.7.1",
     "react": "^18",
     "react-dom": "^18",
-    "serve": "^14.1.2"
+    "serve": "^14.1.2",
+    "typescript": "^4.7.4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
   }
 }
