--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "prettier": "2.7.1",
     "react": "^18",
     "react-dom": "^18",
-    "serve": "^14.1.2",
     "typescript": "^4.7.4",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "@types/file-saver": "^2.0.1",
+    "tslib": "^2.0.0"
   }
 }
