--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -36,9 +36,7 @@
     "@patternfly/react-core": "^4.276.6",
     "@patternfly/react-styles": "^4.92.6",
     "@spice-project/spice-html5": "^0.2.1",
-    "@types/file-saver": "^2.0.1",
     "file-saver": "^1.3.8",
-    "tslib": "^2.0.0",
     "xterm": "^4.8.1",
     "xterm-addon-fit": "^0.2.1"
   },
@@ -52,6 +50,7 @@
     "@patternfly/react-table": "^4.112.39",
     "@patternfly/react-code-editor": "^4.82.113",
     "rimraf": "^2.6.2",
-    "@patternfly/patternfly-a11y": "^4.3.1"
+    "@patternfly/patternfly-a11y": "^4.3.1",
+    "serve": "^14.1.2"
   }
 }
