--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@patternfly/react-console",
-  "version": "4.93.38",
+  "version": "5.0.0-alpha.0",
   "description": "This package provides VncConsole, SerialConsole and DesktopViewer React components to be used alongside patternfly-react to access virtual machine or server consoles.",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -29,12 +29,13 @@
   },
   "homepage": "https://github.com/patternfly/react-console/#readme",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "tag": "alpha"
   },
   "dependencies": {
     "@novnc/novnc": "^1.3.0",
-    "@patternfly/react-core": "^4.276.6",
-    "@patternfly/react-styles": "^4.92.6",
+    "@patternfly/react-core": "^5.0.0-alpha.50",
+    "@patternfly/react-styles": "^5.0.0-alpha.5",
     "@spice-project/spice-html5": "^0.2.1",
     "file-saver": "^1.3.8",
     "xterm": "^4.8.1",
@@ -45,10 +46,10 @@
     "react-dom": "^16.8 || ^17 || ^18"
   },
   "devDependencies": {
-    "@patternfly/documentation-framework": "^1.8.1",
-    "@patternfly/patternfly": "^4.224.2",
-    "@patternfly/react-table": "^4.112.39",
-    "@patternfly/react-code-editor": "^4.82.113",
+    "@patternfly/documentation-framework": "^2.0.0-alpha.12",
+    "@patternfly/patternfly": "^5.0.0-alpha.37",
+    "@patternfly/react-table": "^5.0.0-alpha.51",
+    "@patternfly/react-code-editor": "^5.0.0-alpha.51",
     "rimraf": "^2.6.2",
     "@patternfly/patternfly-a11y": "^4.3.1",
     "serve": "^14.1.2"
