--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -34,8 +34,8 @@
   },
   "dependencies": {
     "@novnc/novnc": "^1.3.0",
-    "@patternfly/react-core": "^5.0.0-alpha.72",
-    "@patternfly/react-styles": "^5.0.0-alpha.7",
+    "@patternfly/react-core": "^5.0.0-alpha.127",
+    "@patternfly/react-styles": "^5.0.0-alpha.17",
     "@spice-project/spice-html5": "^0.2.1",
     "file-saver": "^1.3.8",
     "xterm": "^4.8.1",
@@ -46,12 +46,14 @@
     "react-dom": "^16.8 || ^17 || ^18"
   },
   "devDependencies": {
-    "@patternfly/documentation-framework": "^2.0.0-alpha.29",
-    "@patternfly/patternfly": "^5.0.0-alpha.43",
+    "@patternfly/documentation-framework": "^2.0.0-alpha.50",
+    "@patternfly/patternfly": "^5.0.0-alpha.69",
     "@patternfly/patternfly-a11y": "^4.3.1",
-    "@patternfly/react-code-editor": "^5.0.0-alpha.79",
-    "@patternfly/react-table": "^5.0.0-alpha.80",
+    "@patternfly/react-code-editor": "^5.0.0-alpha.128",
+    "@patternfly/react-table": "^5.0.0-alpha.131",
     "rimraf": "^2.6.2",
-    "serve": "^14.1.2"
+    "serve": "^14.1.2",
+    "react-monaco-editor": "^0.51.0",
+    "monaco-editor": "^0.34.1"
   }
 }
