--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@patternfly/react-console",
-  "version": "5.0.0-alpha.0",
+  "version": "5.0.0-prerelease.0",
   "description": "This package provides VncConsole, SerialConsole and DesktopViewer React components to be used alongside patternfly-react to access virtual machine or server consoles.",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -30,27 +30,27 @@
   "homepage": "https://github.com/patternfly/react-console/#readme",
   "publishConfig": {
     "access": "public",
-    "tag": "alpha"
+    "tag": "prerelease"
   },
   "dependencies": {
     "@novnc/novnc": "^1.3.0",
-    "@patternfly/react-core": "5.0.0-prerelease.13",
-    "@patternfly/react-styles": "5.0.0-prerelease.5",
+    "@patternfly/react-core": "^5.0.0-prerelease.13",
+    "@patternfly/react-styles": "^5.0.0-prerelease.5",
     "@spice-project/spice-html5": "^0.2.1",
     "file-saver": "^1.3.8",
     "xterm": "^4.8.1",
     "xterm-addon-fit": "^0.2.1"
   },
   "peerDependencies": {
-    "react": "^16.8 || ^17 || ^18",
-    "react-dom": "^16.8 || ^17 || ^18"
+    "react": "^17 || ^18",
+    "react-dom": "^17 || ^18"
   },
   "devDependencies": {
-    "@patternfly/documentation-framework": "^2.0.0-alpha.57",
-    "@patternfly/patternfly": "5.0.0-prerelease.10",
+    "@patternfly/documentation-framework": "^2.0.0-alpha.73",
+    "@patternfly/patternfly": "^5.0.0-prerelease.10",
     "@patternfly/patternfly-a11y": "^4.3.1",
-    "@patternfly/react-code-editor": "5.0.0-prerelease.13",
-    "@patternfly/react-table": "5.0.0-prerelease.13",
+    "@patternfly/react-code-editor": "^5.0.0-prerelease.13",
+    "@patternfly/react-table": "^5.0.0-prerelease.13",
     "rimraf": "^2.6.2",
     "serve": "^14.1.2",
     "react-monaco-editor": "^0.51.0",
