--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -34,8 +34,8 @@
   },
   "dependencies": {
     "@novnc/novnc": "^1.3.0",
-    "@patternfly/react-core": "^5.0.0-prerelease.13",
-    "@patternfly/react-styles": "^5.0.0-prerelease.5",
+    "@patternfly/react-core": "^5.0.0-prerelease.26",
+    "@patternfly/react-styles": "^5.0.0-prerelease.7",
     "@spice-project/spice-html5": "^0.2.1",
     "file-saver": "^1.3.8",
     "xterm": "^4.8.1",
@@ -46,11 +46,11 @@
     "react-dom": "^17 || ^18"
   },
   "devDependencies": {
-    "@patternfly/documentation-framework": "^2.0.0-alpha.73",
-    "@patternfly/patternfly": "^5.0.0-prerelease.10",
+    "@patternfly/documentation-framework": "^5.0.15",
+    "@patternfly/patternfly": "^5.0.0-prerelease.16",
     "@patternfly/patternfly-a11y": "^4.3.1",
-    "@patternfly/react-code-editor": "^5.0.0-prerelease.13",
-    "@patternfly/react-table": "^5.0.0-prerelease.13",
+    "@patternfly/react-code-editor": "^5.0.0-prerelease.26",
+    "@patternfly/react-table": "^5.0.0-prerelease.26",
     "rimraf": "^2.6.2",
     "serve": "^14.1.2",
     "react-monaco-editor": "^0.51.0",
