--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@patternfly/react-console",
-  "version": "5.0.0-prerelease.0",
+  "version": "0.0.0",
   "description": "This package provides VncConsole, SerialConsole and DesktopViewer React components to be used alongside patternfly-react to access virtual machine or server consoles.",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -34,8 +34,8 @@
   },
   "dependencies": {
     "@novnc/novnc": "^1.3.0",
-    "@patternfly/react-core": "^5.0.0-prerelease.26",
-    "@patternfly/react-styles": "^5.0.0-prerelease.7",
+    "@patternfly/react-core": "^5.0.0",
+    "@patternfly/react-styles": "^5.0.0",
     "@spice-project/spice-html5": "^0.2.1",
     "file-saver": "^1.3.8",
     "xterm": "^4.8.1",
@@ -47,10 +47,10 @@
   },
   "devDependencies": {
     "@patternfly/documentation-framework": "^5.0.15",
-    "@patternfly/patternfly": "^5.0.0-prerelease.16",
+    "@patternfly/patternfly": "^5.0.0",
     "@patternfly/patternfly-a11y": "^4.3.1",
-    "@patternfly/react-code-editor": "^5.0.0-prerelease.26",
-    "@patternfly/react-table": "^5.0.0-prerelease.26",
+    "@patternfly/react-code-editor": "^5.0.0",
+    "@patternfly/react-table": "^5.0.0",
     "rimraf": "^2.6.2",
     "serve": "^14.1.2",
     "react-monaco-editor": "^0.51.0",
