--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   ],
   "scripts": {
     "build": "yarn workspace @patternfly/react-console build",
+    "build:watch": "npm run build:watch -w @patternfly/react-console",
     "build:docs": "yarn workspace @patternfly/react-console docs:build",
-    "start": "yarn build && concurrently --kill-others \"yarn workspace @patternfly/react-console docs:develop\"",
+    "start": "concurrently --kill-others \"npm run build:watch\" \"npm run docs:develop -w @patternfly/react-console\"",
     "serve:docs": "yarn workspace @patternfly/react-console docs:serve",
     "clean": "yarn workspace @patternfly/react-console clean",
     "lint:js": "node --max-old-space-size=4096 node_modules/.bin/eslint packages --ext js,jsx,ts,tsx --cache",
