--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -5,10 +5,11 @@
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
+    "build": "yarn build:esm && yarn build:cjs && yarn cp:css",
     "build:watch": "npm run build:esm -- --watch",
     "build:esm": "tsc --build --verbose ./tsconfig.json",
     "build:cjs": "tsc --build --verbose ./tsconfig.cjs.json",
+    "cp:css": "cp -r src/css dist/css",
     "clean": "rimraf dist",
     "docs:develop": "pf-docs-framework start",
     "docs:build": "pf-docs-framework build all --output public",
@@ -39,6 +40,7 @@
     "@patternfly/react-styles": "6.0.0-alpha.23",
     "@spice-project/spice-html5": "^0.2.1",
     "file-saver": "^1.3.8",
+    "react-jss": "^10.10.0",
     "xterm": "^4.8.1",
     "xterm-addon-fit": "^0.2.1"
   },
@@ -52,8 +54,8 @@
     "@patternfly/patternfly-a11y": "^4.3.1",
     "@patternfly/react-code-editor": "6.0.0-alpha.61",
     "@patternfly/react-table": "6.0.0-alpha.61",
+    "monaco-editor": "^0.34.1",
     "rimraf": "^2.6.2",
-    "serve": "^14.2.3",
-    "monaco-editor": "^0.34.1"
+    "serve": "^14.2.3"
   }
 }
