--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@novnc/novnc": "^1.5.0",
-    "@patternfly/react-core": "^5.0.0",
-    "@patternfly/react-styles": "^5.0.0",
+    "@patternfly/react-core": "^6.0.0-alpha.94",
+    "@patternfly/react-styles": "^6.0.0-alpha.33",
     "@spice-project/spice-html5": "^0.2.1",
     "file-saver": "^1.3.8",
     "react-jss": "^10.10.0",
@@ -49,11 +49,11 @@
     "react-dom": "^17 || ^18"
   },
   "devDependencies": {
-    "@patternfly/documentation-framework": "6.0.0-alpha.41",
-    "@patternfly/patternfly": "6.0.0-alpha.139",
+    "@patternfly/documentation-framework": "6.0.0-alpha.68",
+    "@patternfly/patternfly": "6.0.0-alpha.205",
     "@patternfly/patternfly-a11y": "^4.3.1",
-    "@patternfly/react-code-editor": "6.0.0-alpha.61",
-    "@patternfly/react-table": "6.0.0-alpha.61",
+    "@patternfly/react-code-editor": "6.0.0-alpha.94",
+    "@patternfly/react-table": "6.0.0-alpha.95",
     "monaco-editor": "^0.34.1",
     "rimraf": "^2.6.2",
     "serve": "^14.2.3"
