--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "14.5.2",
+    "@types/file-saver": "^2.0.7",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "babel-jest": "^29.7.0",
@@ -52,11 +55,8 @@
     "prettier": "2.7.1",
     "react": "^18",
     "react-dom": "^18",
-    "typescript": "^4.7.4",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/file-saver": "^2.0.7",
-    "tslib": "^2.6.3"
+    "tslib": "^2.6.3",
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
