--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -32,7 +32,7 @@
   "homepage": "https://github.com/patternfly/react-console/#readme",
   "publishConfig": {
     "access": "public",
-    "tag": "alpha"
+    "tag": "prerelease"
   },
   "dependencies": {
     "@novnc/novnc": "^1.5.0",
