--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -42,7 +42,9 @@ jobs:
             }
       - name: Add label if user is a team member
         if: steps.check_team_membership.outputs.is_team_member == 'true'
-        uses: actions-ecosystem/action-add-labels@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          labels: "frequent-flyer"
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/labels \
+            -d '{"labels":["Frequent flyer"]}'
