--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -38,4 +38,4 @@ jobs:
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/labels \
-          -d '{"labels":["Frequent flyer"]}'
+          -d '{"labels":["PF Team"]}'
