feat(ver): update to rc versions

--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@novnc/novnc": "^1.5.0",
-    "@patternfly/react-core": "^6.0.0-alpha.100",
-    "@patternfly/react-styles": "^6.0.0-alpha.34",
+    "@patternfly/react-core": "^6.0.0-prerelease.21",
+    "@patternfly/react-styles": "^6.0.0-prerelease.6",
     "@spice-project/spice-html5": "^0.2.1",
     "file-saver": "^1.3.8",
     "react-jss": "^10.10.0",
@@ -49,11 +49,11 @@
     "react-dom": "^17 || ^18"
   },
   "devDependencies": {
-    "@patternfly/documentation-framework": "6.0.0-alpha.79",
-    "@patternfly/patternfly": "6.0.0-alpha.205",
+    "@patternfly/documentation-framework": "6.0.0-alpha.108",
+    "@patternfly/patternfly": "6.0.0-prerelease.15",
     "@patternfly/patternfly-a11y": "^4.3.1",
-    "@patternfly/react-code-editor": "6.0.0-alpha.100",
-    "@patternfly/react-table": "6.0.0-alpha.101",
+    "@patternfly/react-code-editor": "6.0.0-prerelease.21",
+    "@patternfly/react-table": "6.0.0-prerelease.22",
     "monaco-editor": "^0.34.1",
     "rimraf": "^2.6.2",
     "serve": "^14.2.3"
