--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -45,8 +45,8 @@
     "xterm-addon-fit": "^0.8.0"
   },
   "peerDependencies": {
-    "react": "^17 || ^18",
-    "react-dom": "^17 || ^18"
+    "react": "^17 || ^18 || ^19",
+    "react-dom": "^17 || ^18 || ^19"
   },
   "devDependencies": {
     "@patternfly/documentation-framework": "6.0.0-alpha.108",
